feat(condo): DOMA-11043 added restrictionEndDay field to MeterReportingPeriod (#5782)
* feat(condo): DOMA-11043 added strict period validations in meter reading

* feat(condo): DOMA-11043 added strict period form field on meter reporting period page

* feat(condo): DOMA-11043 added isStrict field to MeterReportingPeriod

* feat(condo): DOMA-11043 added readingsRestrictedUntilDay field and adjusted validations for creating meter readings

* feat(condo): DOMA-11043 added restrictionEndDay field

* feat(condo): DOMA-11043 modified reading date validation logic taking into account restrictionEndDay

* fix(condo): DOMA-11043 add multi select for properties on create meter reporting period page

* fix(condo): DOMA-11043 set isStrict to false automatically if period spans into next month

* fix(condo): DOMA-11043 added more specs and pr fixes

* refactor(condo): DOMA-11043 made variable names easier to understand

* chore(condo): DOMA-11043 regenerate migration

* fix(condo): DOMA-11043 fix access for bulk create

* refactor(condo): DOMA-11043 removed isStrict field, new migration

* refactor(condo): DOMA-11043 removed isStrict from tests and check logic

* fix(condo): DOMA-11043 removed isStrict on web, added FF and fixed epmty table after deleting all periods

* fix(condo): DOMA-11175 fixed disabling all properties checkbox

* chore(condo): DOMA-11043 regenerate migration

* chore(condo): DOMA-11043 fix prop type

* fix(condo): DOMA-11043 fixed access and added tests for it

* fix(condo): DOMA-11043 design review fixes

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -375,10 +375,12 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "Meter with same account number exist in current organization in unit {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "Meter with same number and resource exist in current organization and linked with account number {accountNumbersCsv}. Please check your data.",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Reading date ({givenDate}) can not be from the future",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "The date of the meter reading ({givenDate}) must not be later than the end of the specified period for taking readings ({notifyEndDay} day of each month)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please remove next fields: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Meter {meterNumber} has {numberOfTariffs} tariff(s), please fill next fields: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "The \"finish\" field can take values in the range from 1 to 31",
   "api.meter.meterReportingPeriod.INVALID_START": "The \"start\" field can take values in the range from 1 to 31",
+  "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "The end of the restriction of taking readings can only take a value from 1 to 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Organization is required for create meter reading reporting period",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "There is no such property in the organization",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Account number field is filled incorrectly",
@@ -2121,6 +2123,15 @@
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Finish must be greater than start",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "date of each month inclusive",
   "pages.condo.meter.reportingPeriod.create.organizationPeriod": "For all properties",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Restrictions setup",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "Until the end of the period",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Without restrictions",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Allow to take readings",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "When the period ends, residents will be able to take readings, but they will see a notification that they will be taken into account next month",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "No readings will be accepted after the {notifyEndDay} date and until the end of the month. Residents will be able to turn them in from the 1st of next month",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "With this setting, residents cannot transmit readings after the end of the period and before the beginning of the next month. You have specified a deadline that starts in one month and ends in the next, so you will not be able to set a limit.",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Residents will receive a notification about the time limit for taking readings",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Create period",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "This period will apply to all properties that do not have a period with a specific address",
   "pages.condo.meter.reportingPeriod.create.start": "Beginning of period",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "The period will be permanently deleted.",
@@ -2344,6 +2355,8 @@
   "pages.condo.property.type.village": "Village",
   "pages.condo.property.unit.Name": "Name",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "It doesn't look like a house address. Check if you have specified everything correctly.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Previously, the period was selected for all houses. It can be changed in the «Meter reporting period» section after the creation of the house.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "The reading period is set up automatically — from {notifyStartDay} to {notifyEndDay}",
   "pages.condo.property.warning.modal.HelpMessage": "Unsaved information about this property will be lost if you leave this page. You can save the information or continue to edit  by closing this modal window.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Parking place names must be unique",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Property with this address has already been added to the organization",
