--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -375,10 +375,12 @@
   "api.meter.meter.SAME_ACCOUNT_NUMBER_EXISTS_IN_OTHER_UNIT": "ИПУ с таким лицевым счетом уже есть в организации в помещении {unitsCsv}",
   "api.meter.meter.SAME_NUMBER_AND_RESOURCE_EXISTS_IN_ORGANIZATION": "ИПУ с таким номером и ресурсом уже есть в организации на лицевом счете {accountNumbersCsv}. Проверьте, пожалуйста, правильность данных.",
   "api.meter.meterReading.METER_READING_DATE_IN_FUTURE": "Дата передачи показания ({givenDate}) не должна быть больше текущей даты",
+  "api.meter.meterReading.METER_READING_DATE_AFTER_NOTIFY_END": "Дата передачи показания ({givenDate}) не должна быть позднее конца заданного периода для сдачи показаний ({notifyEndDay} число каждого месяца)",
   "api.meter.meterReading.METER_READING_EXTRA_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо удалить значения из полей: {fieldsNames}",
   "api.meter.meterReading.METER_READING_FEW_VALUES": "Количество тарифов в приборе учета {meterNumber}: {numberOfTariffs}, необходимо заполнить поля: {fieldsNames}",
   "api.meter.meterReportingPeriod.INVALID_FINISH": "Конец периода может принимать значение только от 1 до 31",
   "api.meter.meterReportingPeriod.INVALID_START": "Начало периода может принимать значение только от 1 до 31",
+  "api.meter.meterReportingPeriod.INVALID_RESTRICTION_END_DAY": "Конец запрета сдачи показаний может принимать значение только от 1 до 31",
   "api.meter.meterReportingPeriod.ORGANIZATION_IS_REQUIRED": "Необходима организация для создания периода сдачи показаний",
   "api.meter.meterReportingPeriod.PROPERTY_NOT_FOUND": "В организации такого дома нет",
   "api.meter.registerMetersReadings.INVALID_ACCOUNT_NUMBER": "Указан некорректный лицевой счет",
@@ -2120,7 +2122,16 @@
   "pages.condo.meter.reportingPeriod.create.finish": "Конец периода",
   "pages.condo.meter.reportingPeriod.create.incorrectPeriod": "Конец периода должен быть больше начала периода",
   "pages.condo.meter.reportingPeriod.create.inputPostfix": "числа каждого месяца включительно",
-  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Для всех домов",
+  "pages.condo.meter.reportingPeriod.create.organizationPeriod": "Выбрать все дома",
+  "pages.condo.meter.reportingPeriod.create.settings.title": "Настройка ограничений",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.strict": "До окончания периода",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType.notStrict": "Без ограничений",
+  "pages.condo.meter.reportingPeriod.create.settings.periodType": "Разрешить сдавать показания",
+  "pages.condo.meter.reportingPeriod.create.settings.notStrict.tooltip": "Когда период закончится, жители смогут сдавать показания, но увидят уведомление о том, что они будут учтены в следующем месяце",
+  "pages.condo.meter.reportingPeriod.create.settings.strict.tooltip": "После {notifyEndDay} числа и до конца месяца показания не будут приниматься. Жители смогут сдать их с 1 числа следующего месяца.",
+  "pages.condo.meter.reportingPeriod.create.settings.strictPeriodRestricted.tooltip": "С этой настройкой жители не могут передавать показания после окончания периода и до начала следующего месяца. Вы указали период сдачи, который начинается в одном, а заканчивается в следующем месяце, поэтому установить ограничение не получится.",
+  "pages.condo.meter.reportingPeriod.create.settings.alert": "Жители получат уведомление об ограничении сроков сдачи показаний",
+  "pages.condo.meter.reportingPeriod.create.save.button": "Создать период",
   "pages.condo.meter.reportingPeriod.create.organizationTooltip": "Этот период будет действовать для всех домов, у которых нет периода с определенным адресом",
   "pages.condo.meter.reportingPeriod.create.start": "Начало периода",
   "pages.condo.meter.reportingPeriod.update.ConfirmDeleteMessage": "Период будет удален навсегда.",
@@ -2344,6 +2355,8 @@
   "pages.condo.property.type.village": "Коттеджный поселок",
   "pages.condo.property.unit.Name": "Название",
   "pages.condo.property.warning.modal.AddressValidationErrorMsg": "Это не похоже на адрес дома. Проверьте, всё ли вы правильно указали.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.description": "Ранее период был выбран для всех домов. Его можно изменить в разделе «Период подачи показаний ИПУ» после создания дома.",
+  "pages.condo.property.info.alert.ReportingPeriodForOrganization.message": "Период сдачи показаний настроен автоматически — с {notifyStartDay} по {notifyEndDay} число",
   "pages.condo.property.warning.modal.HelpMessage": "Информация о доме не сохранится, если вы уйдёте со страницы. Сохраните изменения или продолжите редактировать информацию о доме, закрыв это сообщение.",
   "pages.condo.property.warning.modal.SameParkingPlaceNamesErrorMsg": "Названия машиномест должны быть уникальными",
   "pages.condo.property.warning.modal.SamePropertyErrorMsg": "Дом с таким адресом уже был добавлен в организацию",
