fix(condo): DOMA-11188 display files attached message in ticket comment created notification (#5876)
* fix(condo): DOMA-11189 set files attached message if no content

* fix(condo): DOMA-11189 update ticket comment created template for case when no author in message

* fix(condo): DOMA-11189 update message templates and text

* hotfix(telephony): do not redirect to index when error occured

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -1550,6 +1550,7 @@
   "notification.messages.TICKET_ASSIGNEE_CONNECTED.push.title": "New ticket",
   "notification.messages.TICKET_COMMENT_ADDED.email.subject": "We have news on ticket #{data.ticketNumber}! 🦖",
   "notification.messages.TICKET_COMMENT_ADDED.push.title": "Ticket news 💡",
+  "notification.messages.TICKET_COMMENT_CREATED.filesAttached": "files sent",
   "notification.messages.TICKET_COMMENT_CREATED.telegram.openTicket": "Open a ticket",
   "notification.messages.TICKET_COMMENT_CREATED.telegram.ticketType.fromResident": "(from resident)",
   "notification.messages.TICKET_COMMENT_CREATED.telegram.ticketType.organization": "(internal)",
