fix(condo): make it feature complete && remove PropertyReportCard

--- a/apps/condo/lang/en/en.json
+++ b/apps/condo/lang/en/en.json
@@ -11,6 +11,7 @@
   "AddItemUsingFileUpload": "Using file input",
   "AddItemUsingForm": "Using form input",
   "And": "and",
+  "AndOthers": "and others",
   "AnotherContextAlreadyCreated": "You've already connected to another integration. To change the current one, contact support of «{company}»",
   "ApplyChanges": "Apply Changes",
   "AreYouSure": "Are you sure? ",
@@ -2280,6 +2281,7 @@
   "pages.condo.property.id.propertyReportDescription": "Sber customers can setup and send clear and detailed report to the residents. It contains important information about expenses and income of the property",
   "pages.condo.property.id.propertyReportTitle": "Property report",
   "pages.condo.property.id.setupReportTitle": "Setup report",
+  "pages.condo.property.id.ticketInformationTitle": "Tickets",
   "pages.condo.property.index.Buildings.Tab.Title": "Buildings",
   "pages.condo.property.index.CreatePropertyButtonLabel": "Create",
   "pages.condo.property.index.CreatePropertyModalTitle": "Create",
@@ -2296,6 +2298,13 @@
   "pages.condo.property.index.TableField.UninhabitedUnitsCount": "Uninhabited units",
   "pages.condo.property.index.TableField.UnitsCount": "Flats",
   "pages.condo.property.index.UpdatePropertyTitle": "Update",
+  "pages.condo.property.map.modal.errorLoadingContacts": "Failed to load residents",
+  "pages.condo.property.map.modal.goToContacts": "To contact info",
+  "pages.condo.property.map.modal.noContacts": "No residents have been added to this property in the platform yet.",
+  "pages.condo.property.map.modal.noContacts.emptyView.subtitle": "Shall we add the first one right now?",
+  "pages.condo.property.map.modal.noContacts.emptyView.title": "There are currently no residents in this unit",
+  "pages.condo.property.map.modal.title": "Property Details",
+  "pages.condo.property.map.modal.totalContacts": "Registered residents",
   "pages.condo.property.menu.MenuPlaceholder": "Add element",
   "pages.condo.property.modal.RenameNextParking": "Rename the following parking in order",
   "pages.condo.property.modal.RenameNextParkingUnits": "Rename the following parking unit in order",
