fix(condo): DOMA-11193 added translations for property meter reading import task interface

--- a/apps/condo/lang/es/es.json
+++ b/apps/condo/lang/es/es.json
@@ -2863,6 +2863,13 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparando la importación de lecturas de contadores",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Lecturas de contador procesadas: : {imported} de {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Importar lecturas de contador",
+  "tasks.MeterReadingsImportTask.progress.description.completed": "Se ha creado el archivo, actualice la página",
+  "tasks.MeterReadingsImportTask.progress.description.completed.link.label": "Descargar",
+  "tasks.MeterReadingsImportTask.progress.description.error": "Archivo no importado. {errorMessage}",
+  "tasks.MeterReadingsImportTask.progress.description.partiallyCompleted": "Fichero importado parcialmente. Corregir errores y cargar de nuevo los registros rotos",
+  "tasks.MeterReadingsImportTask.progress.description.preparing": "Preparando la importación de lecturas de contadores",
+  "tasks.MeterReadingsImportTask.progress.description.processing": "Lecturas de contador procesadas: : {imported} de {total}",
+  "tasks.MeterReadingsImportTask.progress.title": "Importar lecturas de contador de edificio",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Archivo generado",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Descargar",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Preparando la exportación",
