--- a/apps/condo/lang/ru/ru.json
+++ b/apps/condo/lang/ru/ru.json
@@ -2863,6 +2863,13 @@
   "tasks.MeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
   "tasks.MeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
   "tasks.MeterReadingsImportTask.progress.title": "Импорт ИПУ",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.completed": "Файл импортирован, пожалуйста, обновите страницу",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.completed.link.label": "Скачать",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.error": "Файл не импортирован. {errorMessage}",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.partiallyCompleted": "Файл импортирован частично. Устраните ошибки и импортируйте ошибочные строки заново",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.preparing": "Подготовка к импорту",
+  "tasks.PropertyMeterReadingsImportTask.progress.description.processing": "Обработано записей: {imported} из {total}",
+  "tasks.PropertyMeterReadingsImportTask.progress.title": "Импорт ОДПУ",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed": "Файл сформирован",
   "tasks.NewsItemRecipientsExportTask.progress.description.completed.link.label": "Скачать",
   "tasks.NewsItemRecipientsExportTask.progress.description.preparing": "Подготовка к экспорту",
